# helix

./: Cargo.toml  rust-toolchain.toml
builtin-plugins/hello-world/: Cargo.toml  README.md
builtin-plugins/hello-world/src/: bindings.rs  lib.rs
builtin-plugins/hello-world/wit/: world.wit
helix-plugin/: Cargo.toml
helix-plugin/src/: bindings.rs  import_impls.rs  lib.rs  plugin_invocation_context.rs
helix-plugin/wit/: plugin.wit
helix-term/: Cargo.toml
helix-term/src/: application.rs  lib.rs
helix-term/src/plugin/: bindings.rs  exports.rs  import_impls.rs  loader.rs  mod.rs  plugin.wit  temporary_owned_reference.rs
