[package]
name = "helix-plugin"
description = """A WebAssembly plugin system"""
include = ["src/**/*"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
log = "~0.4"
anyhow = "1"

wasmtime = { version = "28.0" }
