[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:hello-world"

# WTF is the difference between *.component.target.dependencies and *.component.dependencies ??
[package.metadata.component.target.dependencies]
"helix:plugin" = { path = 'D:\git\florianhartung\helix\helix-plugin\wit\' }